# POLIMI_CG_21-22_dronesimulator

./: .gitignore  CMakeLists.txt  DroneSimulator.cpp  DroneSimulator.hpp  Models.hpp  MyProject.cpp  MyProject.hpp  README.md  compile_and_run.py
shaders/: SkyBoxvert.spv  frag.spv  shader.frag  shaderDrone.frag  shaderDrone.vert  shaderDroneFrag.spv  shaderSkyBox.frag  shaderSkyBox.vert  shaderSkyBoxFrag.spv  shaderSkyBoxVert.spv  shaderTerrain.frag  shaderTerrain.vert  shaderTerrainFrag.spv  shaderTerrainVert.spv
